CHATS_SIT/force-app/main/default/objects/Auth_Schedule_Recurrence__c.object
<CustomObject>
    <fields>
        <fullName>DTE_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fri__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN_AUTH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization</label>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipName>Auth_Schedule_Recurrence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecurDay__c</fullName>
        <label>RecurDay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurDays__c</fullName>
        <formula>IF( Mon__c , &apos;Mon&apos;, &apos;&apos;) +  IF( Tue__c , &apos;,Tue&apos;, &apos;&apos;) + IF( Wed__c , &apos;,Wed&apos;, &apos;&apos;) +IF( Thur__c , &apos;,Thur&apos;, &apos;&apos;)+IF( Fri__c , &apos;,Fri&apos;, &apos;&apos;)+IF( Sat__c , &apos;,Sat&apos;, &apos;&apos;) + IF( Sun__c , &apos;,Sun&apos;, &apos;&apos;)</formula>
        <label>RecurDays</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recur_Type__c</fullName>
        <label>Recurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Daily/Weekly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thur__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeekDays__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WeekDays</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysOfMonth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DaysOfMonth</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Authorization Schedule Recurrence</label>
    <nameField>
        <displayFormat>Recurr-{0000}</displayFormat>
        <label>Authorization Recurrence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorization Schedule Recurrence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>